# sentiment-analysis

./: .gitignore  pyproject.toml
csv/: both.csv  class.csv  comma.csv  emotion_test_phrases_text.csv  phrases.csv  test10.csv
csv/older/: emtions_and_phrase.csv
research/: 20231023_direct_model.py  20241021_api_use.py  20241021_data_load.py  20241021_fine_tuning.py  20241021_model_train.py  20241021_small_train.py  20241023_multi_model_options.py  20241104_imports.py  20241111_testing.py  20241205_row_csv.py
src/: CSV_reader.py  fisrt.py  main.py  sentence_reader.py
src/api_models/: Albert_base_v2_emotion.py  BERT_tiny_emotion_intent.py  Distilbert_base_uncased_emotion.py  api_models.py  bert_base_uncased_emotion.py
src/direct_models/: Albert_base_v2_emotion.py  BERT_tiny_emotion_intent.py  Distilbert_base_uncased_emotion.py  bert_base_uncased_emotion.py  direct_models.py
src/models/: emotion_models.py
src/utils/: emotion_analyzer.py  emotion_analyzer_from_CSV.py  utils.py
