[tool.poetry]
name = "analysis-s"
version = "0.1.0"
description = ""
authors = ["SantiRod247 <santiagorod247@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^3.0.1"
torch = "^2.5.0"
torchvision = "^0.20.0"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
pillow = "^11.0.0"
transformers = {extras = ["torch"], version = "^4.45.2"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
